--- a/mmSerialPort/app/src/main/res/values/strings.xml
+++ b/mmSerialPort/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="zero">0</string>
 
     <string name="button_start">Start</string>
+
+    <string name="error_configuration">Please configure your serial port first.</string>
+    <string name="error_security">You do not have read/write permission to the serial port.</string>
+    <string name="error_unknown">The serial port can not be opened for an unknown reason.</string>
 </resources>
